# ShizukuUesrService

./: README.md  build.gradle.kts  settings.gradle.kts  verizon.json
app/: build.gradle.kts  proguard-rules.pro
app/keystore/: xiao.keystore
app/src/androidTest/java/app/compile/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/app/compile/: IUserService.aidl
app/src/main/assets/: User-Help.json  fastboot-bin.tar.xz
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/app/compile/: HelpActivity.kt  JsonData.kt  MainActivity.kt  SuiApplication.kt  UserService.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_help.xml  activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
